test/cgip/PP/error/inheritance/rep/reperr-29.err20
rep-29.arg, l. 32, c. 12:
  Error : v is multiple defined in super classes
